[package]
name = "scrabble"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.17"
tokio = { version = "1.12.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
